minor code edits